# SimpleOrbits

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  simple_orbits.c
include/: module.h  orbit.h
src/: module.c  orbit.c  vector.c
