[project]
name = "sorbits"
version = "0.0.2"
authors = [
  { name="Stefano Picchioni", email="s.picchioni94@gmail.com" },
]
description = "Python interface that allows multiple orbit calculations"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/stewieGIT/SimpleOrbits"
